fix the searchbar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <form>
+        <input type="text"/>
+        <button type="submit">search</button>
+    </form>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
